@@ -1,6 +1,6 @@
 % File src/library/base/man/extSoftVersion.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 2014 R Core Team
+% Copyright 2014-2015 R Core Team
 % Distributed under GPL 2 or later
 
 \name{extSoftVersion}
@@ -48,6 +48,8 @@ extSoftVersion()
   \code{\link{grSoftVersion}} for third-party graphics software.
 
   \code{\link{tclVersion}} for the version of Tcl/Tk.
+  
+  \code{\link{pcre_config()} for PCRE configuration options.
 }
 \examples{
 extSoftVersion()
